...
                android:fontFamily="sans-serif-light"
                android:textColor="#fff"
                android:textSize="30sp"
                tools:text="Contaminant" />

            <TextView
                android:id="@+id/textDilution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:paddingBottom="20dp"
                android:textColor="#d6f6fdf6"
                android:textSize="16sp"
...
                android:textColor="#d6f6fdf6"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonNoDilution"
            style="@style/Button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:minHeight="70dp"
            android:minWidth="260dp"
            android:text="@string/noDilution"
            android:theme="?primaryButtonStyle" />

        <Button
            android:id="@+id/buttonDilution1"
            style="@style/Button"
            android:layout_marginBottom="10dp"
            android:minHeight="70dp"
            android:minWidth="260dp"
            android:text="@string/timesDilution"
            android:theme="?primaryButtonStyle" />

        <Button
            android:id="@+id/buttonDilution2"
            style="@style/Button"
            android:layout_marginBottom="10dp"
            android:minHeight="70dp"
            android:minWidth="260dp"
            android:text="@string/timesDilution"
            android:theme="?primaryButtonStyle" />
...
