...
        android:gravity="center_vertical"
        android:padding="6dp"
        android:text="@string/calibrationIsInvalid"
        android:textSize="16sp" />

    <ListView
        android:id="@android:id/list"
        android:layout_below="@+id/textCalibrationError"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:clickable="true"
        android:layout_above="@+id/buttonStart"
        tools:listitem="@layout/row_calibrate" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="60dp"
...
