...
    tools:context=".sensor.chamber.CalibrateListActivity">
    <item
        android:id="@+id/menuSave"
        android:enabled="true"
        android:icon="@drawable/ic_save_black_24dp"
        android:orderInCategory="0"
        android:title="@string/save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menuLoad"
        android:enabled="true"
        android:icon="@drawable/ic_file_upload_black_24dp"
        android:orderInCategory="1"
        android:title="@string/load"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
...
